fix: 🧪 rounds are correctly visible
rounds are correctly visible for mobile devices / tablets

--- a/packages/tennis-tournaments/src/TournamentRound.module.css
+++ b/packages/tennis-tournaments/src/TournamentRound.module.css
@@ -8,13 +8,21 @@
 }
 
 @media (min-width: 1110px) {
-  .Order2 {
+  .Index2 {
     margin-right: 0px;
   }
 }
 
 @media (max-width: 1110px) {
-  .Order1 {
+  /*
+   * It can be Index0 or Index1, so using :last-child instead
+   *
+   * 2 1 0 => 1 0
+   * 1 0 2 => 1 0
+   * 0 1 2 => 0 1
+   */
+  .Order0 ~ .Order1,
+  .Order1 ~ .Order0 {
     margin-right: 0px;
   }
 
@@ -24,9 +32,17 @@
 }
 
 @media (max-width: 740px) {
+  /* it overrides (max-width: 1110px) values */
+  .Order0 ~ .Order1,
+  .Order1 ~ .Order0 {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
   .Order0 {
     /* Adds 40px to left and right so for smaller screen cards don't stick to the left edge */
-    margin: 0px 40px;
+    margin-left: 40px;
+    margin-right: 40px;
   }
 
   .Order1 {
@@ -38,12 +54,12 @@
   margin-bottom: 30px;
 }
 
-.Order1 .CardWrapper {
+.Index1 .CardWrapper {
   /* (2 MatchCard height (120px) + margin-bottom (30px) - MatchCard height (120px)) / 2 */
   padding: 75px 0;
 }
 
-.Order2 .CardWrapper {
+.Index2 .CardWrapper {
   /* (4 MatchCard height (120px) + 3 margin-bottom (30px) - MatchCard height (120px)) / 2 */
   margin: 225px 0;
 }
